# package-template

./: .coveragerc.  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  azure-pipelines.yml  pyproject.toml  setup.cfg
src/package_name/: decorators.py
tests/decorators/: test_timeit.py
