[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "package_name"
authors = [
    {name = "<name>", email = "<mail>"},
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = []
dynamic= ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.2",
    "flake8>=6.0.0",
    "ipykernel>=6.21.3",
    "black>=22",
    "isort>=5.12.0",
    "pre-commit>=3.1.1",
    "interrogate>=1.5.0",
    "darglint>=1.8.1",
    "coverage[toml]>=7.2.2",
    "mypy>=1.1.1",
    "pylint>=2.17.1",
    "twine>=4.0.2",
    "keyring",
    "artifacts-keyring",
    "build>=0.10.0"
]

[tools.setuptools.dynamic]
version = {attr = "<package_name>.__version__"}

[project.urls]
repository = "<link>"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["assignment"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''

[tool.interrogate]
ignore-init-module = true
ignore-module = true